--- a/package.json
+++ b/package.json
@@ -6,8 +6,10 @@
         "build": "vite build"
     },
     "devDependencies": {
-        "axios": "^1.1.2",
         "laravel-vite-plugin": "^0.8.0",
         "vite": "^4.0.0"
+    },
+    "dependencies": {
+        "axios": "^1.6.1"
     }
 }
